--- a/nb_ocl/nb.cl.j2
+++ b/nb_ocl/nb.cl.j2
@@ -19,7 +19,7 @@
 __kernel void compute(
     const uint imw,
     const uint imh,
-    __global int *coefs,
+    __global real_t *coefs,
     const uint ncoefs,
     __global complex_t *roots,
     const real_t crmin,
